added 2 modals and main, options screen, need to make realm database working

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ShoppingApp",
+  "name": "shoppingapp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,8 +10,24 @@
     "test": "jest"
   },
   "dependencies": {
+    "@dank-style/animation-plugin": "latest",
+    "@dank-style/react": "latest",
+    "@gluestack-ui/button": "latest",
+    "@gluestack-ui/provider": "latest",
+    "@gluestack-ui/switch": "latest",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@realm/react": "^0.4.3",
+    "gluestack-ui": "latest",
+    "lucide-react-native": "^0.217.0",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "latest",
+    "react-native-modal": "^13.0.1",
+    "react-native-safe-area-context": "^4.5.3",
+    "react-native-screens": "^3.20.0",
+    "react-native-svg": "^13.9.0",
+    "realm": "^11.9.0",
+    "@gluestack-ui/input": "latest"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -21,12 +37,15 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
+    "@types/react-native": "^0.71.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.9",
     "prettier": "^2.4.1",
+    "react-native": "^0.70.7",
+    "react-native-web": "^0.18.12",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
