--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
     "@dank-style/animation-plugin": "latest",
     "@dank-style/react": "latest",
     "@gluestack-ui/button": "latest",
+    "@gluestack-ui/divider": "latest",
+    "@gluestack-ui/input": "latest",
+    "@gluestack-ui/pressable": "latest",
     "@gluestack-ui/provider": "latest",
     "@gluestack-ui/switch": "latest",
+    "@gluestack-ui/textarea": "latest",
+    "@gluestack-ui/toast": "latest",
+    "@legendapp/motion": "^2.2.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@realm/react": "^0.4.3",
@@ -22,12 +28,12 @@
     "lucide-react-native": "^0.217.0",
     "react": "18.2.0",
     "react-native": "latest",
+    "react-native-image-crop-picker": "^0.40.0",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.9.0",
-    "realm": "^11.9.0",
-    "@gluestack-ui/input": "latest"
+    "realm": "^11.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
