--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,6 @@ yarn.lock
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+
+# testing
+/coverage
