--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "shoppingapp",
+  "author": "Dominik Kalicun",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "build": "react-native build-android --mode=release",
+    "bundle": "react-native bundle --platform android --dev false --entry-file index.tsx --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
@@ -25,10 +28,11 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@realm/react": "^0.4.3",
     "gluestack-ui": "latest",
-    "lucide-react-native": "^0.217.0",
+    "lucide-react-native": "^0.261.0",
     "react": "18.2.0",
-    "react-native": "latest",
+    "react-native": "0.72.4",
     "react-native-image-crop-picker": "^0.40.0",
+    "react-native-linear-gradient": "^2.8.2",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
@@ -40,6 +44,7 @@
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@react-native/metro-config": "0.72.9",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
@@ -50,7 +55,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.9",
     "prettier": "^2.4.1",
-    "react-native": "^0.70.7",
+    "react-native": "0.72.4",
     "react-native-web": "^0.18.12",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
